// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`JobCard should not render shelf section 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={null}
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should not render shelf section when none of the shelf links has substantial items 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [],
              "label": "Job Details",
            },
            Object {
              "items": Array [],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should pass through bookmark props 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Button
      aria-pressed={false}
      className="bookmarkButton"
      component="button"
      onClick={[Function]}
      role="button"
      tabIndex={0}
    >
      <Icon
        animation="bounce"
        className="bookmarked"
        lineHeight=""
        rotation=""
        size="small"
        smoothRotate={false}
        type="bookmark"
      />
    </Button>
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should pass through viewed prop 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render company with bold keyword 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render job title component 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render job title with bold keyword 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render jobStreet standout style 1`] = `
<Card
  className="container borderRoot highlightedBg"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": true,
              "showCompanyPic": true,
              "showDescription": true,
              "showHighlightedBg": true,
              "showSellingPoint": true,
            }
          }
        />
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": true,
              "showCompanyPic": true,
              "showDescription": true,
              "showHighlightedBg": true,
              "showSellingPoint": true,
            }
          }
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": true,
              "showCompanyPic": true,
              "showDescription": true,
              "showHighlightedBg": true,
              "showSellingPoint": true,
            }
          }
        />
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": true,
              "showCompanyPic": true,
              "showDescription": true,
              "showHighlightedBg": true,
              "showSellingPoint": true,
            }
          }
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render jobsDB default style 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": false,
              "showCompanyPic": false,
              "showDescription": false,
              "showHighlightedBg": false,
              "showSellingPoint": true,
            }
          }
        />
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": false,
              "showCompanyPic": false,
              "showDescription": false,
              "showHighlightedBg": false,
              "showSellingPoint": true,
            }
          }
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": false,
              "showCompanyPic": false,
              "showDescription": false,
              "showHighlightedBg": false,
              "showSellingPoint": true,
            }
          }
        />
        <Component
          jobAdTypeOption={
            Object {
              "showCompanyLogo": false,
              "showCompanyPic": false,
              "showDescription": false,
              "showHighlightedBg": false,
              "showSellingPoint": true,
            }
          }
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render only applied badge, when both applied and expired states are active 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render plain company label 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render selected style 1`] = `
<Card
  className="container borderRoot selected"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render tag links 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
          "tagLinks": Array [
            Object {
              "child": "keyword 1",
              "link": "/jobCard",
            },
            Object {
              "child": "keyword 2",
              "link": "/jobCard",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render with Classified in grey label 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render with applied badge 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render with company confidential in grey label 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render with default props 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render with expired badge 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render with featured label 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render with selling points props 1`] = `
<Card
  className="container borderRoot"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;

exports[`JobCard should render without border 1`] = `
<Card
  className="container"
>
  <div
    className="leftContainer"
  >
    <Component />
    <Component />
    <div
      className="flexRow"
    >
      <div
        className="leftContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component />
        <Component />
      </div>
      <div
        className="rightContent"
      >
        <Component
          jobAdTypeOption={Object {}}
        />
        <Component
          jobAdTypeOption={Object {}}
        />
      </div>
    </div>
    <ShelfSection
      shelf={
        Object {
          "shelfLinks": Array [
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accountant",
                },
              ],
              "label": "Job function",
            },
            Object {
              "items": Array [
                Object {
                  "link": "/jobCard",
                  "name": "Accounting / Audit / Tax Services",
                },
              ],
              "label": "Industry",
            },
          ],
        }
      }
      showShelfSection={false}
    />
  </div>
</Card>
`;
